static/css/parts/EditorTabs.css
.MainTabs {
  height: 35px;
  background: rgb(40, 46, 47);
  display: flex;
  contain: strict;
  width: 100%;
  margin: 0;
  padding: 0;
  background: var(--TabsBackground); /* TODO variable name should match class name */
  position: absolute;
  overflow: hidden;
}

.MainTab {
  border-right: 1px solid rgb(34, 34, 34);
  background: var(--TabBackground);
  color: var(--TabForeground);
  /* padding-left: 5px; */
  /* padding-right: 5px; */
  display: flex;
  gap: 4px;
  align-items: center;
  font-size: 13px;
  white-space: nowrap;
  max-width: 200px;
  contain: strict;
  height: 100%;
  flex-shrink: 0;
  padding-left: 5px;
}

.MainTabPreview {
  font-style: italic;
}

.MainTabSelected {
  border-right: 1px solid rgb(34, 34, 34);
  background: var(--TabActiveBackground);
  color: var(--TabActiveForeground);
}

.ManiTabLabel {
  pointer-events: none;
  contain: content;
}

.EditorTabCloseButton {
  contain: strict;
  border: none;
  padding: 0;
  width: 23px;
  height: 23px;
  position: relative;
  background: transparent;
  border-radius: 4px;
  display: flex;
  margin-left: 4px;
  flex-shrink: 0;
}

.EditorTabCloseButton::before {
  content: '';
  position: absolute;
  inset: 0;
  background: var(--TabActiveForeground);
  -webkit-mask-image: url(/icons/icon-close.svg);
  mask-image: url(/icons/icon-close.svg);
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-position: center;
  -webkit-mask-size: 50%;
  mask-size: 50%;
}

.MainTab.Dirty .EditorTabCloseButton:before {
  -webkit-mask-image: url(/icons/circle-filled.svg);
  mask-image: url(/icons/circle-filled.svg);
}

.EditorTabCloseButton:hover {
  background: rgba(255, 255, 255, 0.05);
  transition: all 0.1s;
}

.EditorTabStatus {
  width: 22px;
  height: 15px;
}

/* TODO investigate whether classNames vs data-attribute makes a difference here (performance-wise) */
.EditorTabStatus[data-status='1'] /* default */ {
  display: none;
}

.EditorTabStatus[data-status='2'] /* modified */ {
  background: white;
  -webkit-mask: url(/packages/renderer-process/assets/icons/circle-filled.svg) 100% 50% / 15px no-repeat;
}

.DragOver {
  background-color: rgba(83, 89, 93, 0.5);
}

.TabLabel {
  white-space: nowrap;
  contain: content;
  overflow: hidden;
  min-width: 0;
  flex: 1;
}

